@@ -16,7 +16,9 @@ public enum Branch {
     YEAR_2023(2023, LocalDateTime.parse("2023-05-30T00:00:00"), LocalDateTime.parse("2022-11-10T00:00:00"),
         LocalDateTime.parse("2023-02-15T23:59:59"), List.of(SponsorPackage.GOLD, SponsorPackage.PLATINUM, SponsorPackage.GOLD_LITE), true),
     YEAR_2024(2024, LocalDateTime.parse("2024-05-28T00:00:00"), LocalDateTime.parse("2023-11-01T00:00:00"),
-        LocalDateTime.parse("2024-02-15T23:59:59"), List.of(SponsorPackage.GOLD, SponsorPackage.PLATINUM, SponsorPackage.GOLD_LITE), true);
+        LocalDateTime.parse("2024-02-15T23:59:59"), List.of(SponsorPackage.GOLD, SponsorPackage.PLATINUM, SponsorPackage.GOLD_LITE), true),
+    YEAR_2025(2025, LocalDateTime.parse("2025-05-14T00:00:00"), LocalDateTime.parse("2024-10-25T00:00:00"),
+        LocalDateTime.parse("2025-02-15T23:59:59"), Collections.emptyList(), false);
 
     private static final String BRANCH_PREFIX = "YEAR_";
 
@@ -32,7 +34,7 @@ public enum Branch {
 
     private final boolean soldOut;
 
-    private Branch(int year, LocalDateTime startDate) {
+    Branch(int year, LocalDateTime startDate) {
         if (year != startDate.getYear()) {
             throw new IllegalArgumentException("Invalid value for year or startDate");
         }
@@ -45,7 +47,7 @@ public enum Branch {
         soldOut = false;
     }
 
-    private Branch(int year, LocalDateTime startDate, LocalDateTime cfpOpenDate, LocalDateTime cfpCloseDate,
+    Branch(int year, LocalDateTime startDate, LocalDateTime cfpOpenDate, LocalDateTime cfpCloseDate,
         Collection<SponsorPackage> soldOutPackages, boolean soldOut) {
         if (year != startDate.getYear()) {
             throw new IllegalArgumentException("Invalid value for year or startDate");
